<resources>
    <string name="app_name">Folio</string>
    <string name="add_OCV">Add OCV!</string>
    <string name="add_card_button">Add Card!</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="street_address">Address 1*</string>
    <string name="street_address_2">Address 2</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="view_all_button">View All Data</string>
    <string name="phone_number">Phone Number</string>
    <string name="business">Business</string>
    <string name="addManual">Add Cards Manually</string>
    <string name="addOCV">Add Cards Automatically</string>
    <string name="add_SQL">Add SQLite integration to save card data</string>


    <string name="cardFirstName">First Name</string>
    <string name="cardLastName">Last Name</string>
    <string name="cardAddress1">Address 1</string>
    <string name="cardAddress2">Address 2</string>
    <string name="cardCountry">Country</string>
    <string name="cardState">State</string>
    <string name="cardZip">Zip Code</string>
    <string name="cardPhone">Phone Number</string>
    <string name="cardBusiness">Business</string>
    <string name="cardCity">City</string>

    <string name="edit_card_button">Edit Card!</string>
    <string name="send_card_button">Send Card!</string>
    <string name = "save_card_button">Save Changes!</string>

    <string-array name="stateCodes">
        <item>N/A</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>PR</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string-array name="countryCodes">
        <item>USA</item>
        <item>AFG</item>
        <item>ALA</item>
        <item>ALB</item>
        <item>DZA</item>
        <item>ASM</item>
        <item>AND</item>
        <item>AGO</item>
        <item>AIA</item>
        <item>ATA</item>
        <item>ATG</item>
        <item>ARG</item>
        <item>ARM</item>
        <item>ABW</item>
        <item>AUS</item>
        <item>AUT</item>
        <item>AZE</item>
        <item>BHS</item>
        <item>BHR</item>
        <item>BGD</item>
        <item>BRB</item>
        <item>BLR</item>
        <item>BEL</item>
        <item>BLZ</item>
        <item>BEN</item>
        <item>BMU</item>
        <item>BTN</item>
        <item>BOL</item>
        <item>BIH</item>
        <item>BWA</item>
        <item>BVT</item>
        <item>BRA</item>
        <item>IOT</item>
        <item>BRN</item>
        <item>BGR</item>
        <item>BFA</item>
        <item>BDI</item>
        <item>KHM</item>
        <item>CMR</item>
        <item>CAN</item>
        <item>CPV</item>
        <item>CYM</item>
        <item>CAF</item>
        <item>TCD</item>
        <item>CHL</item>
        <item>CHN</item>
        <item>CXR</item>
        <item>CCK</item>
        <item>COL</item>
        <item>COM</item>
        <item>COG</item>
        <item>COD</item>
        <item>COK</item>
        <item>CRI</item>
        <item>CIV</item>
        <item>HRV</item>
        <item>CUB</item>
        <item>CYP</item>
        <item>CZE</item>
        <item>DNK</item>
        <item>DJI</item>
        <item>DMA</item>
        <item>DOM</item>
        <item>ECU</item>
        <item>EGY</item>
        <item>SLV</item>
        <item>GNQ</item>
        <item>ERI</item>
        <item>EST</item>
        <item>ETH</item>
        <item>FLK</item>
        <item>FRO</item>
        <item>FJI</item>
        <item>FIN</item>
        <item>FRA</item>
        <item>GUF</item>
        <item>PYF</item>
        <item>ATF</item>
        <item>GAB</item>
        <item>GMB</item>
        <item>GEO</item>
        <item>DEU</item>
        <item>GHA</item>
        <item>GIB</item>
        <item>GRC</item>
        <item>GRL</item>
        <item>GRD</item>
        <item>GLP</item>
        <item>GUM</item>
        <item>GTM</item>
        <item>GGY</item>
        <item>GIN</item>
        <item>GNB</item>
        <item>GUY</item>
        <item>HTI</item>
        <item>HMD</item>
        <item>VAT</item>
        <item>HND</item>
        <item>HKG</item>
        <item>HUN</item>
        <item>ISL</item>
        <item>IND</item>
        <item>IDN</item>
        <item>IRN</item>
        <item>IRQ</item>
        <item>IRL</item>
        <item>IMN</item>
        <item>ISR</item>
        <item>ITA</item>
        <item>JAM</item>
        <item>JPN</item>
        <item>JEY</item>
        <item>JOR</item>
        <item>KAZ</item>
        <item>KEN</item>
        <item>KIR</item>
        <item>PRK</item>
        <item>KOR</item>
        <item>KWT</item>
        <item>KGZ</item>
        <item>LAO</item>
        <item>LVA</item>
        <item>LBN</item>
        <item>LSO</item>
        <item>LBR</item>
        <item>LBY</item>
        <item>LIE</item>
        <item>LTU</item>
        <item>LUX</item>
        <item>MAC</item>
        <item>MKD</item>
        <item>MDG</item>
        <item>MWI</item>
        <item>MYS</item>
        <item>MDV</item>
        <item>MLI</item>
        <item>MLT</item>
        <item>MHL</item>
        <item>MTQ</item>
        <item>MRT</item>
        <item>MUS</item>
        <item>MYT</item>
        <item>MEX</item>
        <item>FSM</item>
        <item>MDA</item>
        <item>MCO</item>
        <item>MNG</item>
        <item>MNE</item>
        <item>MSR</item>
        <item>MAR</item>
        <item>MOZ</item>
        <item>MMR</item>
        <item>NAM</item>
        <item>NRU</item>
        <item>NPL</item>
        <item>NLD</item>
        <item>ANT</item>
        <item>NCL</item>
        <item>NZL</item>
        <item>NIC</item>
        <item>NER</item>
        <item>NGA</item>
        <item>NIU</item>
        <item>NFK</item>
        <item>MNP</item>
        <item>NOR</item>
        <item>OMN</item>
        <item>PAK</item>
        <item>PLW</item>
        <item>PSE</item>
        <item>PAN</item>
        <item>PNG</item>
        <item>PRY</item>
        <item>PER</item>
        <item>PHL</item>
        <item>PCN</item>
        <item>POL</item>
        <item>PRT</item>
        <item>PRI</item>
        <item>QAT</item>
        <item>REU</item>
        <item>ROU</item>
        <item>RUS</item>
        <item>RWA</item>
        <item>BLM</item>
        <item>SHN</item>
        <item>KNA</item>
        <item>LCA</item>
        <item>MAF</item>
        <item>SPM</item>
        <item>VCT</item>
        <item>WSM</item>
        <item>SMR</item>
        <item>STP</item>
        <item>SAU</item>
        <item>SEN</item>
        <item>SRB</item>
        <item>SYC</item>
        <item>SLE</item>
        <item>SGP</item>
        <item>SVK</item>
        <item>SVN</item>
        <item>SLB</item>
        <item>SOM</item>
        <item>ZAF</item>
        <item>SGS</item>
        <item>ESP</item>
        <item>LKA</item>
        <item>SDN</item>
        <item>SUR</item>
        <item>SJM</item>
        <item>SWZ</item>
        <item>SWE</item>
        <item>CHE</item>
        <item>SYR</item>
        <item>TWN</item>
        <item>TJK</item>
        <item>TZA</item>
        <item>THA</item>
        <item>TLS</item>
        <item>TGO</item>
        <item>TKL</item>
        <item>TON</item>
        <item>TTO</item>
        <item>TUN</item>
        <item>TUR</item>
        <item>TKM</item>
        <item>TCA</item>
        <item>TUV</item>
        <item>UGA</item>
        <item>UKR</item>
        <item>ARE</item>
        <item>GBR</item>
        <item>UMI</item>
        <item>URY</item>
        <item>UZB</item>
        <item>VUT</item>
        <item>VEN</item>
        <item>VNM</item>
        <item>VGB</item>
        <item>VIR</item>
        <item>WLF</item>
        <item>ESH</item>
        <item>YEM</item>
        <item>ZMB</item>
        <item>ZWE</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

