<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_businesscard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.folio.android.folio.editCard">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id = "@+id/cardfirstName"
        android:text="@string/cardFirstName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id = "@+id/cardlastName"
        android:text="@string/cardLastName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:id="@+id/cardstreetAddress"
        android:text = "@string/cardAddress1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:id="@+id/cardstreetAddress_2"
        android:text = "@string/cardAddress2"/>


    <LinearLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation = "horizontal"
        android:weightSum="1">
        <Spinner
            android:id="@+id/cardCountry"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text = "@string/cardCountry"/>
        <Spinner
            android:id="@+id/cardState"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text = "@string/cardState"/>
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems = "10"
            android:id = "@+id/cardzipCode"
            android:text = "@string/cardZip"
            android:layout_weight="0.36"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation = "horizontal"
        android:weightSum="1">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ems = "10"
            android:id = "@+id/cardCity"
            android:text = "@string/cardCity"/>
        <EditText
            android:layout_width="73dp"
            android:layout_height="40dp"
            android:ems = "10"
            android:id = "@+id/cardphoneNumber"
            android:text = "@string/cardPhone"
            android:maxLength="10"
            android:layout_weight="1.09"/>


    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems = "10"
        android:id = "@+id/cardBusiness"
        android:hint = "@string/cardBusiness"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id = "@+id/editCard"
        android:text = "@string/save_card_button"/>

</LinearLayout>
